--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <!--Title-->
       <title>Cepitu Esplai - Home</title>
       <link rel="stylesheet" href="/css/GeneralStyle.css">
+      <link rel="stylesheet" href="/css/IndexStyle.css">
     
       <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
@@ -20,7 +21,7 @@
     <header>
       <div class="container">
         <div id="logo">
-            <img src="resources/cepitu_logo_blanc.png"></a>
+            <img src="resources/cepitu_logo_blanc.png">
         </div>
         
         <nav>
@@ -29,7 +30,7 @@
             <li><a href="/pages/notAviable.html">Qui Som?</a></li>
             <li><a href="/pages/notAviable.html">Esplai</a></li>
             <li><a href="/pages/notAviable.html">Colònies</a></li>
-            <li><a href="/pages/notAviable.html">Contacte</a></li>
+            <li><a href="/pages/contact.html">Contacte</a></li>
           </ul>
         </nav>
       </div>
@@ -43,7 +44,7 @@
     </section>
 
     <!--Contacte-->
-    <section id="contact">
+    <section class="contact">
         <div class="container">
             <ul>
                 <li><a href="https://www.instagram.com/cepituesplai/?hl=es" title='Instagram' target="_blank"> <img alt="Instagram" src="/resources/instagram.png"></a></li>
