--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div class="container">
             <ul>
                 <li><a href="https://www.instagram.com/cepituesplai/?hl=es" title='Instagram' target="_blank"> <img alt="Instagram" src="/resources/instagram.png"></a></li>
-                <li><a href="https://www.facebook.com/https://es-es.facebook.com/cepituesplai/" title='Facebook' target="_blank"> <img alt="Facebook" src="/resources/facebook.png"></a></li>
-                <li><a href="cepituesplai@gmail.com" title='Gmail' target="_blank"> <img alt="Gmail" src="/resources/gmail.png"></a></li>
+                <li><a href="https://www.facebook.com/cepituesplai/" title='Facebook' target="_blank"> <img alt="Facebook" src="/resources/facebook.png"></a></li>
+                <li><a href="mailto:cepituesplai@gmail.com.com"> <img alt="Gmail" src="/resources/gmail.png"></a></li>
             </ul>
         </div>
     </section>
