--- a/pages/esplai.html
+++ b/pages/esplai.html
@@ -45,6 +45,7 @@
                 <p>Més de 30 anys ens avalen en el món del lleure; el Cepitu neix de la inquietud i la il·lusió de formar i educar els nens i nenes a través de jocs, gimcanes, balls, cançons... Sempre amb un objetiu: aconseguir que tots els nens i nenes aprenguin passant-s'ho bé! Dissabte rere dissabte l'esplai ofereix la possibilitat a tots els nens i nenes que ho vulguin de fer que els caps de setmana no siguin avorrits. Si la tele no t'interesa i t'agrada fer amics i amigues, el Cepitu et permet fer del cap de setmana una aventura, cada dia diferent.</p>
                 <p><b>On i quan?</b></p>
                 <p>Cada dissabte de 16:30 a 19:30 a l'escola Bisbat d'Egara</p>
+                <p><b>Quin grup faig?</b></p>
             </div>
         </section>
         
@@ -63,14 +64,14 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section id="grups">
             <div class="container">
-                <div class="grup"><p>De 3 a 5 anys</p></div>
-                <div class="grup"><p>hey hey1</p></div>
-                <div class="grup"><p>hey hey2</p></div>
-                <div class="grup"><p>hey hey3</p></div>
-                <div class="grup"><p>hey hey4</p></div>
-                <div class="grup"><p>hey hey5</p></div>
+                <div class="grup"><h2>Minis </h2><p>De 3 a 5 anys</p></div>
+                <div class="grup"><h2>Petits</h2><p>De 6 a 7 anys</p></div>
+                <div class="grup"><h2>Mitjans</h2><p>De 8 a 9 anys</p></div>
+                <div class="grup"><h1>Grans</h1><p>De 10 a 12 anys</p></div>
+                <div class="grup"><h1>Joves 1</h1><p>De 13 a 14 anys</p></div>
+                <div class="grup"><h1>Joves 2</h1><p>De 15 a 16 anys</p></div>
             </div>
         </section>
         
