Implementat Esplai i Colonies
Falta acabar els grups (imatges i textos)

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <ul>
             <li><a title="Ja estas en aquesta pagina">Home</a></li>
             <li><a href="/pages/notAviable.html">Qui Som?</a></li>
-            <li><a href="/pages/notAviable.html">Esplai</a></li>
-            <li><a href="/pages/notAviable.html">Colònies</a></li>
+            <li><a href="/pages/esplai.html">Esplai</a></li>
+            <li><a href="/pages/colonies.html">Colònies</a></li>
             <li><a href="/pages/contact.html">Contacte</a></li>
           </ul>
         </nav>
