--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,9 +24,9 @@
                     <ul>
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/pages/notAviable.html">Qui Som?</a></li>
-                        <li><a href="/pages/notAviable.html">Esplai</a></li>
-                        <li><a href="/pages/notAviable.html">Colònies</a></li>
-                        <li><a href="/pages/notAviable.html">Contacte</a></li>
+                        <li><a href="/pages/esplai.html">Esplai</a></li>
+                        <li><a href="/pages/colonies.html">Colònies</a></li>
+                        <li><a title="Ja estas en aquesta pagina">Contacte</a></li>
                     </ul>
                 </nav>
             </div>
@@ -36,7 +36,7 @@
                 <p>Pots contactar amb nosaltres per correu electònic, per telèfon o per mitja de les xarxes socials.</p>
                 <ul>
                     <li><img src="/resources/CepituArmy.jpg"/></li>
-                    <li><p>Caldra usar un tamany minim de la taul</p><!--Insertar tabla con contactos--></li>
+                    <li><p>Caldra usar un tamany minim de la taula. Es cau una taula amb telefons de contacte o algo aixi</p><!--Insertar tabla con contactos--></li>
                 </ul>
             </div>
         </section>
