--- a/pages/esplai.html
+++ b/pages/esplai.html
@@ -4,7 +4,7 @@
     <!--Title-->
         <title>Cepitu Esplai - Home</title>
         <link rel="stylesheet" href="/css/GeneralStyle.css">
-        <link rel="stylesheet" href="/css/Esplai-ColoniesStyle.css">
+        <link rel="stylesheet" href="/css/EsplaiStyle.css">
     
         <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
@@ -24,10 +24,10 @@
         
                 <nav>
                     <ul>
-                        <li><a title="Ja estas en aquesta pagina">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="/pages/notAviable.html">Qui Som?</a></li>
-                        <li><a href="/pages/notAviable.html">Esplai</a></li>
-                        <li><a href="/pages/notAviable.html">Colònies</a></li>
+                        <li><a title="Ja estas en aquesta pagina">Esplai</a></li>
+                        <li><a href="/pages/colonies.html">Colònies</a></li>
                         <li><a href="/pages/contact.html">Contacte</a></li>
                     </ul>
                 </nav>
