--- a/pages/colonies.html
+++ b/pages/colonies.html
@@ -26,8 +26,8 @@
                     <ul>
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/pages/notAviable.html">Qui Som?</a></li>
-                        <li><a title="Ja estas en aquesta pagina">Esplai</a></li>
-                        <li><a href="/pages/notAviable.html">Colònies</a></li>
+                        <li><a href="/pages/esplai.html">Esplai</a></li>
+                        <li><a title="Ja estas en aquesta pagina">Colònies</a></li>
                         <li><a href="/pages/contact.html">Contacte</a></li>
                     </ul>
                 </nav>
