Fixed Double Click

--- a/pages/notAviable.html
+++ b/pages/notAviable.html
@@ -3,6 +3,8 @@
   <head> 
   <!--Title-->
       <title>SadTown</title>
+      <link rel="shortcut icon" href="/resources/logo_cepitu.png">
+      
       <link rel="stylesheet" href="/css/GeneralStyle.css">
       <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
   </head>
