--- a/pages/notAviable.html
+++ b/pages/notAviable.html
@@ -12,7 +12,7 @@
   <body>
       <div class="container">
           
-          <p>This content is not aviable yet</p>
+          <p>This content is not available yet</p>
           
       </div>
   </body>
