--- a/pages/colonies.html
+++ b/pages/colonies.html
@@ -72,8 +72,8 @@
             <div class="container">
                 <div class="grup"><h2>Petits </h2>
                     <ul>
-                        <li><img src="/resources/petits.jpg"><li>
-                        <li><p>De 3 a 5 anys</p></li>
+                        <li><img src="/resources/petits.jpg"></li>
+                        <li><p>El grup de petits, per a nens de <b>6 a 7 anys</b>, pasara 12 dies de jocs i aventures a la casa de colònies</p></li>
                     </ul>
                 </div>
                 <div class="grup"><h2>Mitjans</h2>
