--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,7 +39,13 @@
                 <p>Pots contactar amb nosaltres per correu electònic, per telèfon o per mitja de les xarxes socials.</p>
                 <ul>
                     <li><img src="/resources/CepituArmy.jpg"/></li>
-                    <li><p>Caldra usar un tamany minim de la taula. Es cau una taula amb telefons de contacte o algo aixi</p><!--Insertar tabla con contactos--></li>
+                    <li><h4>Responsables d'Esplai</h4>
+                        <p><b>Ferran</b>: 681396060</p>
+                        <p><b>Cris</b>: 681396060</p>
+                        <h4>Responsables de Colònies</h4>
+                        <p><b>Mar</b>: 681396060</p>
+                        <p><b>Georgina</b>: 681396060</p>
+                    </li>
                 </ul>
             </div>
         </section>
