--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       <meta name="description" content="Lloc web de l'esplai Cepitu de Terrassa">
       <meta name="keywords" content="esplai, cepitu, Terrassa, colonies, lleure, dissabte">
       
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111542044-1"></script>
+      <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-111542044-1');
+      </script>
       
   </head>
   
