--- a/pages/notAviable.html
+++ b/pages/notAviable.html
@@ -7,7 +7,17 @@
       
       <link rel="stylesheet" href="/css/GeneralStyle.css">
       <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-  </head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111542044-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-111542044-1');
+        </script>
+      
+    </head>
   
   <body>
       <div class="container">
