OPT Showcase all pages

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
       <!-- Showcase CSS in HTML for optimitzation -->
       <style>
         #showcase {
-    
-            background: url(/resources/showcase_colonies.jpg) no-repeat;
+            background: url(/resources/showcase.jpg) no-repeat;
             background-size: cover;
             background-position: center;
             min-height: 300px;
-    
+
             color: aliceblue;
             text-align: center;
         }
