--- a/pages/colonies.html
+++ b/pages/colonies.html
@@ -114,7 +114,7 @@
                 <!-- Informacio Mitjans -->
                 <div class="grup"><h2>Mitjans</h2>
                     <ul>
-                        <li><img src="/resources/mitjans_.jpg"><li>
+                        <li><img src="/resources/mitjans_.jpg"></li>
                         <li><p>De 6 a 7 anys. Novelista ensayinsta, dramaturgo, Yukio Mishima exploró también con fortuna el gènero del relato. La perla y otros cuentos reúne una excelente selección, que es a la vez un muestrario representativo de las principales inquietudes del autor.</p></li>
                     </ul>
                 </div>
@@ -122,7 +122,7 @@
                 <!-- Informacio Grans -->
                 <div class="grup"><h2>Grans</h2>
                     <ul>
-                        <li><img src="/resources/grans_.jpg"><li>
+                        <li><img src="/resources/grans_.jpg"></li>
                         <li><p>De 6 a 7 anys</p></li>
                     </ul>
                 </div>
@@ -130,7 +130,7 @@
                 <!-- Informacio K0 -->
                 <div class="grup"><h1>K0</h1>
                     <ul>
-                        <li><img src="/resources/grans_.jpg"><li>
+                        <li><img src="/resources/grans_.jpg"></li>
                         <li><p>De 10 a 12 anys</p></li>
                     </ul>
                 </div>
@@ -138,7 +138,7 @@
                 <!-- Informacio K1 -->
                 <div class="grup"><h1>K1</h1>
                     <ul>
-                        <li><img src="/resources/grans_.jpg"><li>
+                        <li><img src="/resources/grans_.jpg"></li>
                         <li><p>De 10 a 12 anys</p></li>
                     </ul>
                 </div>
@@ -146,7 +146,7 @@
                 <!-- Informacio K2 -->
                 <div class="grup"><h1>K2</h1>
                     <ul>
-                        <li><img src="/resources/grans_.jpg"><li>
+                        <li><img src="/resources/grans_.jpg"></li>
                         <li><p>De 10 a 12 anys</p></li>
                     </ul>
                 </div>
@@ -154,7 +154,7 @@
                 <!-- Informacio Ruta -->
                 <div class="grup"><h1>Ruta</h1>
                     <ul>
-                        <li><img src="/resources/grans_.jpg"><li>
+                        <li><img src="/resources/grans_.jpg"></li>
                         <li><p>De 10 a 12 anys</p></li>
                     </ul>
                 </div>
