Added Insta + Foot. Rev

--- a/pages/colonies.html
+++ b/pages/colonies.html
@@ -171,6 +171,7 @@
                 <p>Pl. de la Farinera s/n</p>
                 <p>08221 Terrassa</p>
                 <p>cepituesplai@gmail.com</p>
+                <p>Última Actualització: <script>var f = new Date();document.write (f.getMonth()+1, " - ", f.getFullYear());</script></p>
             </div>
     </footer>
     
