--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <!-- Showcase CSS in HTML for optimitzation -->
       <style>
         #showcase {
-            background: url(/resources/showcase.jpg) no-repeat;
+            background: url(/resources/showcase2.jpg) no-repeat;
             background-size: cover;
             background-position: center;
             min-height: 300px;
@@ -56,9 +56,12 @@
         <nav>
           <ul>
             <li><a title="Ja estas en aquesta pagina">Inici</a></li>
-            <li><a href="/pages/notAviable.html">Qui Som?</a></li>
+            <li><a href="/pages/quiSom.html">Qui Som?</a></li>
+            <li><a href="/pages/families.html">Famílies</a></li>
             <li><a href="/pages/esplai.html">Esplai</a></li>
             <li><a href="/pages/colonies.html">Colònies</a></li>
+            <li><a href="/pages/informacio.html">Informació</a></li>
+            <li><a href="/pages/cancons.html">Cançons</a></li>
             <li><a href="/pages/contact.html">Contacte</a></li>
           </ul>
         </nav>
@@ -86,7 +89,7 @@
     <!-- Explicacio introductoria-->
     <section id="intro">
         <div class="container">
-            <p>Els dissabtes a la tarda són avorrits? No saps que fer? Vols conèixer a molts nens i nenes, fer mil activitats i gaudir com mai? El que has de fer el venir al CEPITU! Dissabte rere dissabte ens trobem al Bisbat d’Egara, i així fem de les tardes avorrides una aventura inoblidable!</p>
+            <p>Els dissabtes a la tarda són avorrits? No saps que fer? Vols conèixer a molts nens i nenes, fer mil activitats i gaudir com mai? El que has de fer el venir al CEPITU!</p> <p>Dissabte rere dissabte ens trobem al Bisbat d’Egara, i així fem de les tardes avorrides una aventura inoblidable!</p>
             <p>Ja saps que faràs quest dissabte a la tarda? </p>
         </div>
     </section>
@@ -109,8 +112,8 @@
     <footer>
         <div class="container">
             <p>Esplai Cepitu</p>
-            <p>Pl. de la Farinera s/n</p>
-            <p>08221 Terrassa</p>
+            <p>C/ Faraday, 96</p>
+            <p>08224 Terrassa</p>
             <p>cepituesplai@gmail.com</p>
             <p>Última Actualització: <script>var f = new Date();document.write (f.getMonth()+1, " - ", f.getFullYear());</script></p>
         </div>
