Added Working photo

--- a/pages/cancons.html
+++ b/pages/cancons.html
@@ -57,6 +57,7 @@
                 <!-- Article introductori-->
                 <h1>Cançons</h1>
                 <p>Aquest contingut encara no esta disponible.</p>
+                <img src="/resources/working.png">
             </div>
         </section>
         
