--- a/pages/esplai.html
+++ b/pages/esplai.html
@@ -119,7 +119,7 @@
                 <div class="grup"><h2>Petits</h2>
                     <ul>
                         <li><img src="/resources/esplai/petitsEsplai.jpeg"></li>
-                        <li><p>De 6 a 8 anys (primer i segona de primària)</p></li>
+                        <li><p>De 6 a 8 anys (primer i segon de primària)</p></li>
                     </ul>
                 </div>
                 <div class="grup"><h2>Mitjans</h2>
