--- a/pages/colonies.html
+++ b/pages/colonies.html
@@ -137,7 +137,7 @@
                 <div class="grup"><h1>K0</h1>
                     <ul>
                         <li><img src="/resources/colonies/k0.jpg"></li>
-                        <li><p>El grup de campaments 0, per a nens i nenes de <b>12 a 13 anys</b> (primer d'ESO), faran una ruta de 8 dies per Catalunya i arribaran a la casa de colònies per passar junts els 4 dies restants.</p></li>
+                        <li><p>Campaments 0 és un nou grup creat per a les colònies 2018 per a nens i nenes de <b>12 a 13 anys</b> (primer d'ESO). Faran una ruta de 8 dies per Catalunya i arribaran a la casa de colònies per passar junts els 4 dies restants.</p></li>
                     </ul>
                 </div>
                 
