--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <meta name="keywords" content="esplai, cepitu, Terrassa, colonies, lleure, dissabte, granota, infants">
       
       <!-- Global site tag (gtag.js) - Google Analytics -->
+      <meta name="google-site-verification" content="j_IIIW3vD7nXzPuLP8xZrPW3fAAKdhynRvFpBSU8wvM" />
+      
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111542044-1"></script>
       <script>
             window.dataLayer = window.dataLayer || [];
