--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <link rel="shortcut icon" href="/resources/logo_cepitu.png">
       
       <!--Style-->
-      <link rel="stylesheet" href="/css/GeneralStyle.css">
       <link rel="stylesheet" href="/css/IndexStyle.css">
+      <link rel="stylesheet" href="/css/GeneralStyle.css">
     
       <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
@@ -113,7 +113,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>Esplai Cepitu</p>
+            <p>Centre d'Esplai Tum Tum</p>
             <p>C/ Faraday, 96</p>
             <p>08224 Terrassa</p>
             <p>cepituesplai@gmail.com</p>
