--- a/pages/contact.html
+++ b/pages/contact.html
@@ -90,7 +90,7 @@
         
         <footer>
             <div class="container">
-                <p>Esplai Cepitu</p>
+                <p>Centre d'Esplai Tum Tum</p>
                 <p>C/ Faraday, 96</p>
                 <p>08224 Terrassa</p>
                 <p>cepituesplai@gmail.com</p>
