--- a/pages/esplai.html
+++ b/pages/esplai.html
@@ -61,7 +61,7 @@
                             <li><a title="Ja estas en aquesta pàgina">Esplai</a></li>
                             <li><a href="/pages/colonies.html">Colònies</a></li>
                             <li><a href="/pages/informacio.html">Informació</a></li>
-                            <li><a href="/pages//cancons.html">Cançons</a></li>
+                            <li><a href="/pages/cancons.html">Cançons</a></li>
                             <li><a href="/pages/contact.html">Contacte</a></li>
                       </ul>
                 </nav>
@@ -167,8 +167,7 @@
                 <p>Tot això ho viurem a Mas La Coromina, una casa de colònies situada a la Vall de Bianya, envoltada de prats i boscos.</p>
                 <ul>
                     <li><img src="/resources/minocolonies1.jpg"></li>
-                    <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2985.4644287353326!2d2.0139501154025057!3d41.55919209328984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a492ddab3cad03%3A0x97373e02efda687d!2sEscola+Bisbat+d&#39;%C3%88gara!5e0!3m2!1ses!2ses!4v1517920111965" width="300" height="220" frameborder="0" style="border:0" allowfullscreen></iframe></li>
-                    <li><img src="/resources/minicolonies2.jpg"></li>
+                    <li><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11816.112315650045!2d2.4313444!3d42.2352131!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcc8e5558cefda8f1!2sMas+Coromina!5e0!3m2!1ses!2ses!4v1518795834020" width="300" height="220" frameborder="0" style="border:0" allowfullscreen></iframe></li>
                 </ul>
                 <div class="separator"></div>
                 <h2>Sortida a la Platja</h2>
@@ -181,7 +180,7 @@
         
         <footer>
             <div class="container">
-                <p>Esplai Cepitu</p>
+                <p>Centre d'Esplai Tum Tum</p>
                 <p>C/ Faraday, 96</p>
                 <p>08224 Terrassa</p>
                 <p>cepituesplai@gmail.com</p>
