--- a/pages/colonies.html
+++ b/pages/colonies.html
@@ -170,7 +170,7 @@
         <!-- Footer -->
         <footer>
             <div class="container">
-                <p>Esplai Cepitu</p>
+                <p>Centre d'Esplai Tum Tum</p>
                 <p>C/ Faraday, 96</p>
                 <p>08224 Terrassa</p>
                 <p>cepituesplai@gmail.com</p>
