--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- Explicacio introductoria-->
     <section id="intro">
         <div class="container">
-            <p>Els dissabtes a la tarda són avorrits? No saps que fer? Vols conèixer a molts nens i nenes, fer mil activitats i gaudir com mai? El que has de fer el venir al CEPITU!</p> <p>Dissabte rere dissabte ens trobem al Bisbat d’Egara, i així fem de les tardes avorrides una aventura inoblidable!</p>
+            <p>Els dissabtes a la tarda són avorrits? No saps que fer? Vols conèixer a molts nens i nenes, fer mil activitats i gaudir com mai? El que has de fer és venir al CEPITU!</p> <p>Dissabte rere dissabte ens trobem al Bisbat d’Egara, i així fem de les tardes avorrides una aventura inoblidable!</p>
             <p>Ja saps que faràs quest dissabte a la tarda? </p>
         </div>
     </section>
