--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,7 +54,7 @@
         </header>
         <section>
             <div class="container">
-                <p>Pots contactar amb nosaltres per correu electònic, per telèfon o per mitja de les xarxes socials.</p>
+                <p>Pots contactar amb nosaltres per correu electònic, per telèfon o per mitjà de les xarxes socials.</p>
                 <ul>
                     <li><img src="/resources/CepituArmy.jpg"/></li>
                     <li><h4>Responsables d'Esplai</h4>
