--- a/pages/esplai.html
+++ b/pages/esplai.html
@@ -76,8 +76,8 @@
         
         <section id="intro">
             <div class="container">
-                <p><b>Que fem?</b></p>
-                <p>Dissabte rere dissabte l'esplai ofereix la possibilitat a tots els nens i nenes que ho vulguin de fer que els caps de setmana no siguin avorrits. Si la tele no t'interesa i t'agrada fer amics i amigues, el Cepitu et permet fer del cap de setmana una aventura, cada dia diferent.</p>
+                <p><b>Què fem?</b></p>
+                <p>Dissabte rere dissabte l'esplai ofereix la possibilitat, a tots els nens i nenes que vulguin, de fer que els seus caps de setmana no siguin avorrits. Si la tele no t'interesa i t'agrada fer amics i amigues, el Cepitu et permet fer del cap de setmana una aventura, cada dia diferent.</p>
                 <p>Dins del nostre esplai ens dividim en grups en funció de l'edat. Cada grup adapta les seves activitats mantenint un fil conductor comú en tots els grups. Aquest centre d'interès canvia cada trimestre i va relacionat amb un valor.</p>
                 <p>Cada trimestre organitzem una <b>sortida i una trobada amb les families</b> diferent.</p>
                 <p><b>On i quan?</b></p>
@@ -147,7 +147,7 @@
                 <div class="grup"><h1>Puzle</h1>
                     <ul>
                         <li><img src="/resources/esplai/puzleEsplai.jpg"></li>
-                        <li><p>De 17 anys</p></li>
+                        <li><p>De 17 a 18 anys</p></li>
                     </ul>
                 </div>
             </div>
