--- a/pages/families.html
+++ b/pages/families.html
@@ -78,7 +78,7 @@
         
         <section id="intro">
             <div class="container">
-                <p>Des de l'esplai creiem que la implicació per part de les famílies és de gran importancia.</p><p>Creiem que les famílies han de formar part activa de l'esplai per tal de treballar conjuntament en l'educació dels infants. És per això que cada trimestre organitzem una diada per a famílies, infants i monitors. Realitzem, també trimestralment, reunions de mares i pares per tal de explicar el projecte educatiu que tenim preparat per aquell trimestre.</p><p>També comptem amb una comissió de mares i pares que organitza activitats per apropar les famílies al centre.</p>
+                <p>Des de l'esplai creiem que la implicació per part de les famílies és de gran importància.</p><p>Creiem que les famílies han de formar part activa de l'esplai per tal de treballar conjuntament en l'educació dels infants. És per això que cada trimestre organitzem una diada per a famílies, infants i monitors. Realitzem, també trimestralment, reunions de mares i pares per tal de explicar el projecte educatiu que tenim preparat per aquell trimestre.</p><p>També comptem amb una comissió de mares i pares que organitza activitats per apropar les famílies al centre.</p>
             </div>
         </section>
         
