--- a/pages/quiSom.html
+++ b/pages/quiSom.html
@@ -79,8 +79,8 @@
         <section id="intro">
             <div class="container">
                 <p>Més de 30 anys ens avalen en el món del lleure; el Cepitu neix de la inquietud i la il·lusió de formar i educar els nens i nenes a través de jocs, gimcanes, balls, cançons... Sempre amb un objetiu: aconseguir que tots els nens i nenes aprenguin passant-s'ho bé!</p>
-                <p>Som un grup de 45 monitors i monitrius que, voluntariament, ens involucrem en l'educació dels infants a través del lleure.</p>
-                <p>Realitzem reunions setmanalment per poder fer que tant els dissabtes com les colònies d'estiu siguin inoblidables.</p>
+                <p>Som un grup de 45 monitors i monitrius que, voluntàriament, ens involucrem en l'educació dels infants a través del lleure.</p>
+                <p>Realitzem reunions setmanals per poder fer que tant els dissabtes com les colònies d'estiu siguin inoblidables.</p>
             </div>
         </section>
         
