--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
       <!--Description and keywords-->
-      <meta name="description" content="Lloc web de l'esplai Cepitu de Terrassa">
+      <meta name="description" content="Cada setmana fem dels dissabtes una nova aventura. Lloc web de l'esplai Cepitu de Terrassa.">
       <meta name="keywords" content="esplai, cepitu, Terrassa, colonies, lleure, dissabte, granota, infants">
       
       <!-- Global site tag (gtag.js) - Google Analytics -->
