--- a/pages/families.html
+++ b/pages/families.html
@@ -88,7 +88,7 @@
                 <h3>Diada</h3>
                 <ul>
                     <li><p>A mitjans del primer trimestre s'organitza un sopar per a famílies, infants i monitors. Organitzem també alguna activitat i convidem a tothom qui vulgui realitzar-la.</p></li>
-                    <li><img src="/resources/families/elSopar.jpeg"></li>
+                    <li><img src="/resources/families/elSopar.jpg"></li>
                 </ul>
                 <div class="separator"></div>
                 <h3>Pujada a la Mola</h3>
