--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
       <!--Description and keywords-->
-      <meta name="description" content="Cada setmana fem dels dissabtes una nova aventura. Lloc web de l'esplai Cepitu de Terrassa.">
-      <meta name="keywords" content="esplai, cepitu, Terrassa, colonies, lleure, dissabte, granota, infants">
+      <meta name="description" content="Els dissabtes a la tarda són avorrits? No saps què fer? Vols conèixer a molts nens i nenes, fer mil activitats i gaudir com mai? El que has de fer és venir al CEPITU! Cada setmana fem dels dissabtes una nova aventura - Lloc web de l'esplai Cepitu de Terrassa.">
+      <meta name="keywords" content="esplai, cepitu, Terrassa, colonies, lleure, dissabte, granota, infants, minicolonies, diada, families">
       
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <meta name="google-site-verification" content="_vzqadUf-Do-AOmEtabc0mXOWWQnEHpp_9K4q9qdH98" />
