--- a/pages/families.html
+++ b/pages/families.html
@@ -33,8 +33,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <!--Description and keywords-->
-      <meta name="description" content="Cada dissabte de 16:30 a 19:30 fem esplai amb nens i nenes de 6 a 18 anys. Aqui trobaras tota la informacio al respecte.">
-      <meta name="keywords" content="esplai, cepitu, Terrassa, lleure, dissabte, granota, infants">
+      <meta name="description" content="Creiem que les famílies han de formar part activa de l'esplai per tal de treballar conjuntament en l'educació dels infants.">
+      <meta name="keywords" content="esplai, cepitu, Terrassa, lleure, dissabte, granota, infants, families, pares, mares">
         
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111542044-1"></script>
