--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -16,8 +16,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <!--Description and keywords-->
-      <meta name="description" content="Cada dissabte de 16:30 a 19:30 fem esplai amb nens i nenes de 6 a 18 anys. Aqui trobaras tota la informacio al respecte.">
-      <meta name="keywords" content="esplai, cepitu, Terrassa, lleure, dissabte, granota, infants">
+      <meta name="description" content="Totes les informacions/cartes/programacions que donem a les famílies estan aquí per a ser descarregada.">
+      <meta name="keywords" content="esplai, cepitu, Terrassa, lleure, dissabte, granota, infants, cartes, informacio, programacions, comunicació, famílies">
         
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111542044-1"></script>
