--- a/pages/quiSom.html
+++ b/pages/quiSom.html
@@ -33,7 +33,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <!--Description and keywords-->
-      <meta name="description" content="Cada dissabte de 16:30 a 19:30 fem esplai amb nens i nenes de 6 a 18 anys. Aqui trobaras tota la informacio al respecte.">
+      <meta name="description" content="Més de 30 anys ens avalen en el món del lleure; el Cepitu neix de la inquietud i la il·lusió de formar i educar els nens i nenes a través de jocs, gimcanes, balls, cançons... Sempre amb un objetiu: aconseguir que tots els nens i nenes aprenguin passant-s'ho bé!">
       <meta name="keywords" content="esplai, cepitu, Terrassa, lleure, dissabte, granota, infants">
         
         <!-- Global site tag (gtag.js) - Google Analytics -->
