--- a/pages/cancons.html
+++ b/pages/cancons.html
@@ -15,7 +15,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <!--Description and keywords-->
-      <meta name="description" content="Cada dissabte de 16:30 a 19:30 fem esplai amb nens i nenes de 6 a 18 anys. Aqui trobaras tota la informacio al respecte.">
+      <meta name="description" content="Les cançons que cantem a l'esplai i a les colònies estan disponibles aqui amb lletra i ritme. També pots accedir a les cançons d'altres anys i reviure colònies passades.">
       <meta name="keywords" content="esplai, cepitu, Terrassa, lleure, dissabte, granota, infants">
         
         <!-- Global site tag (gtag.js) - Google Analytics -->
