--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -66,7 +66,7 @@
             
             <h3>Colònies 2018</h3>
             <section class="grid">
-                <div><a href="/docs/colonies-2018/" title='Inscripcions Colònies' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_cepitu.png"></a><p>Informació Inscripcions</p></div>
+                <div><a href="/docs/colonies-2018/INFO%20INSCRIPCIONS%20FAMI%CC%81LIES%202018.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_cepitu.png"></a><p>Informació Inscripcions</p></div>
             </section>
             
             <h3>Esplai Tercer Trimestre 2018</h3>
