--- a/pages/inscripcions.html
+++ b/pages/inscripcions.html
@@ -57,7 +57,12 @@
                 <!-- Article introductori-->
                 <h1>Inscripcions</h1>
                 <p>Ompliu aquest formulari per tal de realitzar la vostre inscripcio a -activitat-</p>
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebVVkGoi1feEFGqLvIfkZanS_rUCkF4kE3OeCThHFtKgdDkw/viewform?embedded=true" width="700" height="900" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
+            </div>
+        </section>
+        
+        <section class="formulari">
+            <div class="container">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebVVkGoi1feEFGqLvIfkZanS_rUCkF4kE3OeCThHFtKgdDkw/viewform?usp=sf_link" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
             </div>
         </section>
         
