--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -71,7 +71,7 @@
             
             <h3>Esplai Tercer Trimestre 2018</h3>
             <section class="grid">
-                <div><a href="/docs/esplaiT3-2018/SORTIDA%203ER%20TRIMESTRE.pdf" title='Sortida Tercer Trimestre' target="_blank"> <img alt="Programació Tercer Trimestre" src="/resources/logo_cepitu.png"></a><p>Informació Sortida a la Platja</p></div>
+                <div><a onclick="ga('send', 'event', ‘Visualizacion', ‘CartaSortida', 'PDF');" href="/docs/esplaiT3-2018/SORTIDA%203ER%20TRIMESTRE.pdf" title='Sortida Tercer Trimestre' target="_blank"> <img alt="Programació Tercer Trimestre" src="/resources/logo_cepitu.png"></a><p>Informació Sortida a la Platja</p></div>
                 <div><a href="/docs/esplaiT3-2018/PROGRAMACIONS%20MINIS.pdf" title='Programació Tercer Trimestre' target="_blank"> <img alt="Programació Tercer Trimestre" src="/resources/logo_cepitu.png"></a><p>Programació de MINIS del Tercer Trimestre</p></div>
                 <div><a href="/docs/esplaiT3-2018/PROGRAMACIONS%20PETITS.pdf" title='Programació Tercer Trimestre' target="_blank"> <img alt="Programació Tercer Trimestre" src="/resources/logo_cepitu.png"></a><p>Programació de PETITS del Tercer Trimestre</p></div>
                 <div><a href="/docs/esplaiT3-2018/PROGRAMACIONS%20MITJANS.pdf" title='Programació Tercer Trimestre' target="_blank"> <img alt="Programació Tercer Trimestre" src="/resources/logo_cepitu.png"></a><p>Programació de MITJANS del Tercer Trimestre</p></div>
