--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -66,7 +66,9 @@
             
             <h3>Colònies 2018</h3>
             <section class="grid">
-                <div><a href="/docs/colonies-2018/INFO%20INSCRIPCIONS%20FAMI%CC%81LIES%202018.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_cepitu.png"></a><p>Informació Inscripcions</p></div>
+                <div><a href="/docs/colonies-2018/AUTORITZACIO%CC%81%20MEDICAMENTS%20generals%202018.pdf" title='Autoritzacio Medicaments' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_colonies_2018.png"></a><p>Autorització Medicaments <b>GENERAL</b> (en cas que es cregui convenient)</p></div>
+                <div><a href="/docs/colonies-2018/AUTORITZACIO%CC%81%20MEDICAMENTS%20especials%202018.pdf" title='Autoritzacio Medicaments' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_colonies_2018.png"></a><p>Autorització Medicaments <b>ESPECIAL/CRÒNIC</b> (en cas que sigui necessari)</p></div>
+                <div><a href="/docs/colonies-2018/INFO%20INSCRIPCIONS%20FAMI%CC%81LIES%202018.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_colonies_2018.png"></a><p>Informació Inscripcions</p></div>
             </section>
             
             <h3>Esplai Tercer Trimestre 2018</h3>
