--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -68,6 +68,13 @@
             <section class="grid">
                 <div><a href="/docs/colonies-2018/AUTORITZACIO%CC%81%20MEDICAMENTS%20generals%202018.pdf" title='Autoritzacio Medicaments' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_colonies_2018.png"></a><p>Autorització Medicaments <b>GENERAL</b> (en cas que es cregui convenient)</p></div>
                 <div><a href="/docs/colonies-2018/AUTORITZACIO%CC%81%20MEDICAMENTS%20especials%202018.pdf" title='Autoritzacio Medicaments' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_colonies_2018.png"></a><p>Autorització Medicaments <b>ESPECIAL/CRÒNIC</b> (en cas que sigui necessari)</p></div>
+                <div><a href="/docs/colonies-2018/PETITS_Fitxes%20inscripcio%CC%81%202018%20x25.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2018.png"></a><p>Fitxa Inscripció PETITS</p></div>
+                <div><a href="/docs/colonies-2018/MITJANS_Fitxes%20inscripcio%CC%81%202018.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2018.png"></a><p>Fitxa Inscripció MITJANS</p></div>
+                <div><a href="/docs/colonies-2018/GRANS_Fitxes%20inscripcio%CC%81%202018%20x38.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2018.png"></a><p>Fitxa Inscripció GRANS</p></div>
+                <div><a href="/docs/colonies-2018/K9_Fitxes%20inscripcio%CC%81%202018x35.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2018.png"></a><p>Fitxa Inscripció K9</p></div>
+                <div><a href="/docs/colonies-2018/K1_Fitxes%20inscripcio%CC%81%202018%20x35.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2018.png"></a><p>Fitxa Inscripció K1</p></div>
+                <div><a href="/docs/colonies-2018/K2_Fitxes%20inscripcio%CC%81%202018%20.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2018.png"></a><p>Fitxa Inscripció K2</p></div>
+                <div><a href="/docs/colonies-2018/RUTA_Fitxes%20inscripcio%CC%81%202018%20x22.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2018.png"></a><p>Fitxa Inscripció RUTA</p></div>
                 <div><a href="/docs/colonies-2018/INFO%20INSCRIPCIONS%20FAMI%CC%81LIES%202018.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_colonies_2018.png"></a><p>Informació Inscripcions</p></div>
             </section>
             
