--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -66,7 +66,7 @@
             
             <h3>Esplai Primer Trimestre 2018/19</h3>
             <section class="grid">
-                <div><a href="/docs/esplaiT1-2019/NORMATIVA%20D'INSCRIPCIONS.pdf" title='Normativa d'Inscripció target="_blank"> <img alt="Normativa d'Inscripció" src="/resources/logo_cepitu.png"></a><p>Normativa d'Inscripció</p></div>
+                <div><a href="/docs/esplaiT1-2019/NORMATIVA%20D'INSCRIPCIONS.pdf" title="Inscripcions Esplai" target="_blank"> <img alt="Normativa d'Inscripció" src="/resources/logo_cepitu.png"></a><p>Inscripcions Esplai</p></div>
             </section>
             
             <h3>Colònies 2018</h3>
