--- a/pages/contact.html
+++ b/pages/contact.html
@@ -59,10 +59,10 @@
                     <li><img src="/resources/CepituArmy.jpg"/></li>
                     <li><h4>Responsables d'Esplai</h4>
                         <p><b>Ferran</b>: 610937033</p>
-                        <p><b>Cris</b>: 665156867</p>
+                        <p><b>Sergi</b>: 681396012</p>
                         <h4>Responsables de Colònies</h4>
-                        <p><b>Mar</b>: 696586261</p>
-                        <p><b>Georgina</b>: 626056365</p>
+                        <p><b>Mariona</b>: 660407900</p>
+                        <p><b>Albert</b>: 637931142</p>
                     </li>
                 </ul>
             </div>
