--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -66,6 +66,7 @@
             
             <h3>Esplai Primer Trimestre 2018/19</h3>
             <section class="grid">
+                <div><a href="/docs/esplaiT1-2019/Calendari%20Esplai%20Primer%20Trimestre.pdf" title="Calendari d'Esplai" target="_blank"> <img alt="Calendari d'Esplai" src="/resources/logo_cepitu.png"></a><p>Calendari d'Esplai del Primer Trimestre</p></div>
                 <div><a href="/docs/esplaiT1-2019/NORMATIVA%20D'INSCRIPCIONS.pdf" title="Inscripcions Esplai" target="_blank"> <img alt="Normativa d'Inscripció" src="/resources/logo_cepitu.png"></a><p>Inscripcions Esplai</p></div>
             </section>
             
