--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -65,6 +65,7 @@
         <div class="container">
             <h3>Minicolònies 2019</h3>
             <section class="grid">
+                <div><a href="/docs/minicolonies-2019/2a%20carta%20mini-colo%CC%80nies%202019.pdf" title="Carta Minicolònies" target="_blank"> <img alt="Carta Minicolònies" src="/resources/logo_cepitu.png"></a><p>Segona Carta de Minicolònies 2019</p></div>
                 <div><a href="/docs/minicolonies-2019/AUTORITZACI%C3%93%20MINICOL%C3%92NIES%202019.pdf" title="Carta Minicolònies" target="_blank"> <img alt="Carta Minicolònies" src="/resources/logo_cepitu.png"></a><p>Autorització Minicolònies</p></div>
                 <div><a href="/docs/minicolonies-2019/AUTORITZACI%C3%93%20MEDICAMENTS%20generals%202019.pdf" title="Carta Minicolònies" target="_blank"> <img alt="Carta Minicolònies" src="/resources/logo_cepitu.png"></a><p><p>Autorització Medicaments <b>GENERAL</b> (en cas que es cregui convenient)</p></div>
                 <div><a href="/docs/minicolonies-2019/AUTORITZACI%C3%93%20MEDICAMENTS%20especials%202019.pdf" title="Carta Minicolònies" target="_blank"> <img alt="Carta Minicolònies" src="/resources/logo_cepitu.png"></a><p>Autorització Medicaments <b>ESPECIAL/CRÒNIC</b> (en cas que sigui necessari)</p></div>
